    NB: The first pass is silent and is not logged
- Adds 'reinstall_gop' as Configuration Option
  * This allows switching the 'Reinstall GOP from RAM' Feature, introduced in v0.12.0.AM,
    "ON" or "OFF" in the configuration file. Default is "OFF"
- Now Specfically Logs Booting Clover Instances
  * Now separately identifies Clover instances in the debug log when these are booted
- Changes Misc Token Names for Internal Consistency
  * 'disable_mac_compat_check' to 'disable_compat_check'
  * 'set_mac_boot_args' to 'set_boot_args'
  * 'protect_mac_nvram' to 'protect_nvram'
- Implements Upstream 'firmware_bootnum' manual stanzas (Skipped in v0.13.1.AA)
  * Misc fixes appear to have resolved previously experienced issues
- Fixes Potential Memory Corruption Issues in the Ext2, Ext4 and HFS Drivers
  * Fixes also implemented upstream
  * Users should change earlier versions of these drivers for current ones
  * Copies available from upstream post v0.13.1 releases or after building RefindPlus
- Applies Multiple Code Quality Fixes
  * Several issues identified by an automated static analysis of the code base closed out
- Fixes Default Timeout Setting
  * Was previously set to 20 seconds and not disabled as documented
- Fixes Repeated Icon Scaling on HiDPI Monitors
  * Icons on HiDPI monitors were repeatedly scaled up on each return to the main screen


0.13.1.AB (02 Mar 2021):
- Fixes APFS ReMapping
  * APFS Containers were not excluded as should have been the case
- Fixes Hour Logging
  * Deviation from GetTime spec meant some log files were not in chronological order


0.13.1.AA (02 Mar 2021):
-----------------------
- Syncs with Upstream Post v0.13.1 Updates
  * Adds icon for Manjaro Linux
- Syncs with Upstream v0.13.1
  * Fixes bug that can cause issues with disabled manual boot stanza referencing unreadable volumes
  * Accounts for new upstream initial logging function (ignored by RefindPlus)
  * Records selected EFI-based reboot options in the PreviousBoot variable