@@ -142,7 +142,7 @@ REFIT_CONFIG GlobalConfig = {
     /* DisableAMFI = */ FALSE,
     /* SupplyAPFS = */ FALSE,
     /* SuppressVerboseAPFS = */ FALSE,
-    /* ReinforceAPFS = */ FALSE,
+    /* AssociateAPFS = */ FALSE,
     /* ProtectNVRAM = */ FALSE,
     /* ScanOtherESP = */ FALSE,
     /* ShutdownAfterTimeout = */ FALSE,
