@@ -27,6 +27,7 @@ RefindPlus-specific funtionality can be activated by adding the tokens below to 
 
 Config Token| Functionality
 --- | ---
+associate_apfs| Allows directly booting Big Sur as well as FileVault (without needing PreBoot).
 continue_on_warning| Proceeds as if a key is pressed after screen warnings (enables remote login).
 direct_gop_renderer| Provides a potentially improved GOP instance for certain GPUs.
 disable_amfi| Disables AMFI Checks on Mac OS if required.
@@ -35,7 +36,6 @@ force_trim| Forces `TRIM` on non-Apple SSDs if required.
 ignore_previous_boot| Disables saving the last booted loader if not required.
 protect_nvram| Stops UEFI Windows from saving certificates to Apple NVRAM.
 provide_console_gop| Fixes issues with GOP on some Legacy Macs.
-reinforce_apfs| Allows directly booting Big Sur as well as FileVault (without needing PreBoot).
 reinstall_gop| Reinstalls GOP driver on capable legacy units (such as classic MacPros).
 scale_ui| Provides control of UI element scaling.
 scan_other_esp| Allows other ESPs other than the RefindPlus ESP to be scanned for loaders.
